[package]
name = "n"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.17",features = ["derive","cargo"]}
maplit = "1.0.2"
regex = "1.9.1"
serde_json = "1.0.103"
subprocess = "0.2.9"
colored = "2.0.4"
fnm = { git = "https://github.com/cycade/fnm", branch = "refactor/use-lib-rs" }

[dev-dependencies]
cross = "0.2.5"
